--- a/website/newsletter/174/index.mdx
+++ b/website/newsletter/174/index.mdx
@@ -164,7 +164,7 @@ There’s still a long way to go when you look at the current [compatibility sta
 - 📜 [Image Optimization on CI and Local](https://www.callstack.com/blog/image-optimization-on-ci-and-local)
 - 📖 [Apple will officially drop PWA support with iOS 17.4 in the EU](https://developer.apple.com/support/dma-and-apps-in-the-eu): All the more reason to build true native apps with React Native.
 - 📖 [New React Native Gesture Handler docs](https://docs.swmansion.com/react-native-gesture-handler/)
-- 🐦 [Evan Bacon: New Expo Router template for working with native context menus](https://x.com/Baconbrix/status/1759639968396333392?s=20)
+- 🐦 [Evan Bacon: New Expo Router template for working with native context menus](https://twitter.com/Baconbrix/status/1759639968396333392?s=20)
 - 📦 [gluestack-ui with NativeWind - Copy and paste components into apps](https://gluestack.io/ui/with-nativewind/docs/overview/introduction): Like shadcn/ui, but for React Native.
 - 📦 [react-native-live-markdown](https://github.com/Expensify/react-native-live-markdown): Neat text input field with live markdown formatting.
 - 📦 [expo-share-extension - Create native iOS share extension with a custom view](https://github.com/MaxAst/expo-share-extension)
@@ -178,21 +178,43 @@ There’s still a long way to go when you look at the current [compatibility sta
 - 🎙️ [React Native Radio 288 - Reacting to the 2023 State of React Native Results](https://reactnativeradio.com/episodes/rnr-288-survey-says-react-native-got-more-popular)
 - 🎙️ [Rocket Ship 29 - State of React Native with Áron Berezkin](https://share.transistor.fm/s/aca1a636)
 - 🎙️ [Rocket Ship 30 - Ignite React Native Projects with Frank Calise](https://share.transistor.fm/s/059aa605)
-- 📅 [Chain React 2024 tickets are now on sale - July 17–19, 2024 in Portland, OR](https://x.com/ChainReactConf/status/1758192473686622271)
+- 📅 [Chain React 2024 tickets are now on sale - July 17–19, 2024 in Portland, OR](https://twitter.com/ChainReactConf/status/1758192473686622271)
 - 📅 [React Native EU rebrands to React Universe Conf - Sept 5-6, 2024 in Wrocław, Poland](https://www.reactuniverseconf.com)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 👀 [Updates from the 100th TC39 meeting - Promise.try, function decorators, ArrayBuffer, Uint8Array, Iterator…](https://dev.to/hemanth/updates-from-the-100th-tc39-meeting-4j2f)
+- 👀 [TC39 introduced a new stage 2.7](https://github.com/tc39/process-document/pull/37)
+- 👀 [ES2024 Release Candidate](https://ecmascript-daily.github.io/2024/02/17/release-es2024-candidate-february-2024-tc39-ecma262)
+- 👀 [RFC for Biome plugins](https://github.com/biomejs/biome/discussions/1762)
+- 👀 [Vite 6 discussions - Vite started to collect input for the next major version](https://github.com/vitejs/vite/discussions/15886)
+- 👀 [JSR - new ESM-only package registry from the Deno team](https://jsr.io/)
+- 📜 [JSR first impressions](https://www.kitsonkelly.com/posts/jsr-first-impressions)
+- 📜 [A practical guide to using shadow DOM](https://www.mayank.co/blog/declarative-shadow-dom-guide/)
+- 📜 [How To Center a Div](https://www.joshwcomeau.com/css/center-a-div/)
+- 📜 [Making Use of Code Coverage](https://www.epicweb.dev/making-use-of-code-coverage)
+- 📜 [Get started with v4 of GitHub Actions Artifacts](https://github.blog/2024-02-12-get-started-with-v4-of-github-actions-artifacts/)
+- 📜 [Union, intersection, difference, and more are coming to JavaScript Sets](https://www.sonarsource.com/blog/union-intersection-difference-javascript-sets/)
+- 📜 [Towards Qwik 2.0 - Lighter, Faster, Better](https://www.builder.io/blog/qwik-2-coming-soon)
+- 📜 [Vercel - Finishing Turborepo's migration from Go to Rust](https://vercel.com/blog/finishing-turborepos-migration-from-go-to-rust)
+- 📜 [Node.js Community Debate Intensifies Over Enabling Corepack by Default and Potentially Unbundling npm](https://socket.dev/blog/node-community-debates-enabling-corepack-unbundling-npm)
+- 📜 [Nx Launch Week Recap - Nx 18, Project Crystal, Nx Agents…](https://blog.nrwl.io/launch-nx-week-recap-3bc7c6c49ce1)
+- 📦 [AWS LLRT - New JS runtime for Lambda based on Rust QuickJS engine](https://github.com/awslabs/llrt)
+- 📦 [Observables - Static site generator for data apps, dashboards, reports, and more](https://github.com/observablehq/framework)
+- 📦 [Apple Pkl - A programming language for configuration](https://pkl-lang.org/blog/introducing-pkl.html)
+- 📦 [Tempo - The easiest way to work with dates in JavaScript.](https://tempo.formkit.com/)
+- 📦 [Shiki 1.0 - A beautiful yet powerful syntax highlighter](https://github.com/shikijs/shiki/releases/tag/v1.0.0)
+- 📦 [Mock Service Worker 2.2 - Server Boundary API](https://mswjs.io/blog/introducing-server-boundary)
+- 📦 [Vitest 1.3 - onTestFinished, snapshot serializers, improved browser mode and CLI…](https://github.com/vitest-dev/vitest/releases/tag/v1.3.0)
+- 📦 [Vite 5.1 - Vite Runtime API (experimental)](https://vitejs.dev/blog/announcing-vite5-1.html)
+- 🎥 [Node.js documentary trailer](https://www.youtube.com/watch?v=SfWPqr04srM)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/174/meme.jpg)](https://twitter.com/sebastienlorber/status/1758252538883723759)
 
 See ya! 👋
