--- a/website/newsletter/174/index.mdx
+++ b/website/newsletter/174/index.mdx
@@ -1,16 +1,17 @@
 ---
 slug: /174
-title: "This Week In React #174: ReactLabs, React-Strict-DOM, Forget, Remix, Hono, Redwood, Isograph, SafeTest, React-Aria, Reanimated, RNGH, Expo, RN+TV, VisionCamera, Hermes, TC39, LLRT, Vite..."
+title: "This Week In React #174: ReactLabs, React-Strict-DOM, Forget, Remix, Hono, Redwood, Isograph, SafeTest, React-Aria, RN 0.74 RC, Reanimated, RNGH, Expo, RN+TV, VisionCamera, Hermes, TC39, LLRT, Vite..."
 authors: [slorber]
 date: 02-22-2024
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+I took a break last week, so we're catching up on two weeks' worth of news, and there's been a **lot** of it! Many of you like the exhaustive nature of my emails, so... have fun being overwhelmed by the number of links 😅!
 
-Promo [react.paris](http://react.paris) + [reactconnection.io](http://reactconnection.io)
+We have great updates from Meta, with the React Labs update you are probably already aware of, and more recently the React Strict DOM update for cross-platform enthusiast. I'm also excited for the new milestone Remix 2.7 crossed, marketing th beginning of a migration path from React Router apps to Remix SPA mode.
+
+Last call: want to attend [React Conf 2024](https://conf.react.dev/) (May 15-16 Nevada)? There's only one week left to [win a lottery ticket](https://forms.reform.app/bLaLeE/react-conf-2024-ticket-lottery/1aRQLK), or submit your talk to the [CFP](https://sessionize.com/react-conf-2024/).
 
 <!-- truncate -->
 
@@ -149,7 +150,7 @@ As always, Dan Abramov is the best in expressing the idea in a concise 🐦 [twe
 
 > “Looks like a spiritual successor to RNW, but approached from the other direction (web APIs won, so RN is building support for a strict subset). Essentially, you’ll be able to render a `<div>` in RN.”
 
-There’s still a long way to go when you look at the current [compatibility status](https://github.com/facebook/react-strict-dom/blob/main/packages/react-strict-dom/COMPATIBILITY.md), but this is certainly an exciting milestone on a more universal React!
+There’s still a long way to go when you look at the current [compatibility status](https://github.com/facebook/react-strict-dom/blob/main/packages/react-strict-dom/COMPATIBILITY.md), but this is certainly an exciting milestone on a more universal React! Meta is already using it! See also this 🐦 [thread from Lorenzo and the involvement of Microsoft](https://twitter.com/Kelset/status/1760367655423549480).
 
 ---
 
@@ -164,6 +165,7 @@ There’s still a long way to go when you look at the current [compatibility sta
 - 📖 [Apple will officially drop PWA support with iOS 17.4 in the EU](https://developer.apple.com/support/dma-and-apps-in-the-eu): All the more reason to build true native apps with React Native.
 - 📖 [New React Native Gesture Handler docs](https://docs.swmansion.com/react-native-gesture-handler/)
 - 🐦 [Evan Bacon: New Expo Router template for working with native context menus](https://twitter.com/Baconbrix/status/1759639968396333392?s=20)
+- 📦 [React Native 0.74-RC.0](https://github.com/facebook/react-native/releases/tag/v0.74.0-rc.0)
 - 📦 [gluestack-ui with NativeWind - Copy and paste components into apps](https://gluestack.io/ui/with-nativewind/docs/overview/introduction): Like shadcn/ui, but for React Native.
 - 📦 [react-native-live-markdown](https://github.com/Expensify/react-native-live-markdown): Neat text input field with live markdown formatting.
 - 📦 [expo-share-extension - Create native iOS share extension with a custom view](https://github.com/MaxAst/expo-share-extension)
